Fix extra spacing in preset browser tag reference

--- a/css/80_app.css
+++ b/css/80_app.css
@@ -811,6 +811,7 @@ button.add-note svg.icon {
 }
 .poplist .subsection {
     background-color: #CBCBCB;
+    display: flex;
 }
 [dir='ltr'] .poplist .subitems {
     padding-left: 6px;
